--- a/br-api-gateway/package.json
+++ b/br-api-gateway/package.json
@@ -11,12 +11,18 @@
     "fastify": "^4.28.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^1.10.2",
+    "@aws-sdk/client-ssm": "^3.614.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.12.0",
     "pino": "^9.4.0"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
     "tsx": "^4.16.2",
     "vitest": "^2.0.5",
-    "@types/node": "^20.11.30"
+    "@types/node": "^20.11.30",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/pg": "^8.11.6"
   }
 }
