--- a/br-api-gateway/package.json
+++ b/br-api-gateway/package.json
@@ -11,12 +11,17 @@
     "fastify": "^4.28.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^1.10.2",
-    "pino": "^9.4.0"
+    "pino": "^9.4.0",
+    "pg": "^8.12.0",
+    "node-fetch": "^3.3.2",
+    "@aws-sdk/client-ssm": "^3.645.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
     "tsx": "^4.16.2",
     "vitest": "^2.0.5",
-    "@types/node": "^20.11.30"
+    "@types/node": "^20.11.30",
+    "@types/pg": "^8.15.5"
   }
 }
