--- a/br-api-gateway/package.json
+++ b/br-api-gateway/package.json
@@ -8,15 +8,19 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "fastify": "^4.28.1",
+    "@aws-sdk/client-ssm": "^3.637.0",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^1.10.2",
-    "pino": "^9.4.0"
+    "fastify": "^4.28.1",
+    "pg": "^8.12.0",
+    "pino": "^9.4.0",
+    "stripe": "^16.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
+    "@types/node": "^20.11.30",
+    "@types/pg": "^8.15.5",
     "tsx": "^4.16.2",
-    "vitest": "^2.0.5",
-    "@types/node": "^20.11.30"
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   }
 }
