--- a/packages/integrations/tsconfig.json
+++ b/packages/integrations/tsconfig.json
@@ -7,10 +7,8 @@
     "module": "ES2020",
     "target": "ES2020",
     "declaration": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": false,
     "noEmit": false
   },
   "include": ["src"],
-  "exclude": ["dist", "test", "node_modules"]
+  "exclude": ["dist", "node_modules"]
 }
