--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier . --write",
     "format:check": "prettier package.json tests/api_health.test.js srv/lucidia-llm/test_app.py var/www/blackroad/.prettierrc.json .prettierrc.json RUNME.sh Makefile .github/workflows/ci.yml CLEANUP_PLAN.md CLEANUP_DECISIONS.md CLEANUP_RESULTS.md ROLLBACK.md CHANGELOG.md --check --ignore-unknown",
     "test": "npx jest",
+    "test:compliance": "vitest run",
     "guard:dev-mode": "node scripts/security/dev_mode_guard.js",
     "typecheck": "echo 'no typecheck'",
     "health": "node scripts/health.js",
@@ -30,31 +31,38 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^9.4.3",
+    "commander": "^12.1.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.10.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "pdf-parse": "^1.1.1",
     "socket.io": "^4.7.5",
+    "stripe": "^12.18.0",
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
-    "better-sqlite3": "^9.4.3",
-    "stripe": "^12.18.0",
-    "ethers": "^6.10.0",
-    "yaml": "^2.3.4"
+    "yaml": "^2.3.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4",
+    "@types/node": "^20.12.12",
+    "@types/pdf-parse": "^1.1.4",
     "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
-    "prettier": "^3.3.3",
     "husky": "^9.0.10",
-    "lint-staged": "^16.1.5"
+    "jest": "^29.7.0",
+    "lint-staged": "^16.1.5",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.3.3",
+    "supertest": "^6.3.4",
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   },
   "lint-staged": {
     "*.{js,jsx,mjs,cjs,ts,tsx}": [
