--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "@blackroad/custodysync-api",
+  "name": "blackroad-custodysync",
   "version": "0.1.0",
   "type": "module",
-  "main": "dist/server.js",
-  "types": "dist/server.d.ts",
+  "bin": {
+    "blackroad-custodysync": "dist/index.js"
+  },
   "files": ["dist"],
   "dependencies": {
     "@blackroad/adapters": "workspace:*",
     "@blackroad/core": "workspace:*",
     "@blackroad/db": "workspace:*",
     "@blackroad/jobs": "workspace:*",
-    "@fastify/multipart": "^7.7.0",
-    "fastify": "^4.27.2",
-    "zod": "^3.23.8"
+    "commander": "^12.1.0",
+    "ora": "^8.1.1"
   },
   "devDependencies": {
-    "tsx": "^4.15.7",
     "typescript": "^5.5.4"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsx src/server.ts",
-    "start": "node dist/server.js"
+    "build": "tsc -p tsconfig.json"
   }
 }
