--- a/packages/adapters/package.json
+++ b/packages/adapters/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "@blackroad/core",
+  "name": "@blackroad/adapters",
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": ["dist", "config"],
   "dependencies": {
-    "@blackroad/db": "workspace:*",
-    "@blackroad/worm": "workspace:*",
-    "archiver": "^6.0.2",
+    "@blackroad/core": "workspace:*",
     "decimal.js": "^10.4.3",
-    "fast-json-stable-stringify": "^2.1.0",
-    "luxon": "^3.4.4",
-    "zod": "^3.23.8"
+    "csv-parse": "^5.5.5",
+    "yaml": "^2.5.1"
   },
   "devDependencies": {
     "typescript": "^5.5.4"
