--- a/packages/adapters/tsconfig.json
+++ b/packages/adapters/tsconfig.json
@@ -5,7 +5,6 @@
   },
   "include": ["src/**/*.ts"],
   "references": [
-    { "path": "../db" },
-    { "path": "../worm" }
+    { "path": "../core" }
   ]
 }
