--- a/rules/secret_expiry_cluster.yaml
+++ b/rules/secret_expiry_cluster.yaml
@@ -1,6 +1,11 @@
 id: SECRET_EXPIRY_CLUSTER
+name: Secret expiry clustering
 mode: observe
 severity: high
+owners:
+  - "@platform-secrets"
+  - "secrets@company.com"
+docs_url: https://your.docs/policies/secret_expiry_cluster
 metadata:
   product: Secret Hygiene
   description: Cluster secret-expired errors to trigger automated rotation.
