--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "@blackroad/api",
+  "name": "blackroad-clientos",
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "bin": {
+    "blackroad-clientos": "dist/index.js"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js"
+    "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
     "@blackroad/core": "workspace:*",
-    "fastify": "^4.27.2",
-    "fastify-type-provider-zod": "^2.0.0",
-    "zod": "^3.23.8"
+    "commander": "^12.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
