--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@blackroad/core",
+  "name": "@blackroad/policies",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -9,15 +9,10 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
+    "lint": "eslint --ext .ts src",
     "test": "vitest run"
   },
   "dependencies": {
-    "@blackroad/db": "workspace:*",
-    "@blackroad/integrations": "workspace:*",
-    "@blackroad/policies": "workspace:*",
-    "@blackroad/worm": "workspace:*",
-    "bullmq": "^5.9.0",
-    "nanoid": "^5.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
