Add observability telemetry to services

--- a/services/api/package.json
+++ b/services/api/package.json
@@ -9,6 +9,12 @@
     "health": "node healthcheck.mjs"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.52.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.52.1",
+    "@opentelemetry/resources": "^1.9.0",
+    "@opentelemetry/sdk-node": "^0.52.1",
+    "@opentelemetry/sdk-trace-base": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
