--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ uvicorn
 whisper
 typer
 pytest
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-exporter-otlp-proto-http
+opentelemetry-instrumentation-fastapi
