--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,9 +14,18 @@
   "dependencies": {
     "@lucidia/ai": "^0.0.1",
     "@lucidia/core": "^0.0.1",
+    "@blackroad/policies": "workspace:*",
+    "@blackroad/integrations": "workspace:*",
+    "@blackroad/worm": "workspace:*",
+    "@blackroad/db": "workspace:*",
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^3.0.0",
+    "@fastify/type-provider-zod": "^1.2.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "helmet": "^7.1.0"
+    "fastify": "^4.28.0",
+    "helmet": "^7.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
