--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lucidia/core",
   "version": "0.0.1",
-  "description": "Core domain types, validators, and crypto helpers for Lucidia Auto-Box.",
+  "description": "Core domain types, validators, crypto helpers, and the FeeForge billing engine for BlackRoad Finance.",
   "type": "module",
   "license": "Apache-2.0",
   "main": "dist/index.js",
@@ -14,10 +14,14 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "decimal.js": "^10.4.3",
+    "luxon": "^3.4.4",
+    "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   }
 }
