--- a/br-api-gateway/package.json
+++ b/br-api-gateway/package.json
@@ -8,15 +8,24 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "fastify": "^4.28.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^1.10.2",
-    "pino": "^9.4.0"
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.64.6",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.205.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.205.0",
+    "@opentelemetry/resources": "^2.1.0",
+    "@opentelemetry/sdk-metrics": "^2.1.0",
+    "@opentelemetry/sdk-node": "^0.205.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
+    "fastify": "^4.28.1",
+    "pino": "^9.4.0",
+    "pino-pretty": "^13.1.1"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
+    "@types/node": "^20.11.30",
     "tsx": "^4.16.2",
-    "vitest": "^2.0.5",
-    "@types/node": "^20.11.30"
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   }
 }
