feat: enable playwright smoke tests for blackroad site

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,23 @@ jobs:
           node -e "const fs=require('fs');const p='package.json';const j=JSON.parse(fs.readFileSync(p,'utf8'));j.scripts=j.scripts||{};j.scripts.test=j.scripts.test||'echo \"No tests specified\" && exit 0';fs.writeFileSync(p, JSON.stringify(j,null,2));"
       - run: npm ci --omit=optional || npm i --package-lock-only
       - run: npm test
+  site-playwright:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: sites/blackroad
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: npm
+          cache-dependency-path: sites/blackroad/package-lock.json
+      - name: Install dependencies
+        run: npm ci --omit=optional || npm i --package-lock-only
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npm test
+        env:
+          CI: "true"
