--- a/sites/blackroad/package.json
+++ b/sites/blackroad/package.json
@@ -11,12 +11,12 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx || true",
     "format": "prettier -w .",
-    "test": "echo \"(add Playwright later)\"",
-    "e2e": "playwright test || true"
+    "test": "playwright test",
+    "e2e": "playwright test"
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.1",
     "react-rnd": "10.5.2",
     "react-router-dom": "7.8.2",
     "recharts": "^2.11.0"
@@ -26,7 +26,7 @@
     "@playwright/test": "^1.47.0",
     "@size-limit/file": "^11.1.5",
     "@types/react": "^19.1.12",
-    "@types/react-dom": "^18.3.7",
+    "@types/react-dom": "^19.1.5",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
     "@vitejs/plugin-react": "5.0.2",
