--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "next": "^14.2.5",
     "socket.io": "^4.7.5",
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
     "better-sqlite3": "^9.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "stripe": "^12.18.0",
     "ethers": "^6.10.0",
     "yaml": "^2.3.4"
@@ -56,7 +59,11 @@
     "eslint": "^9.12.0",
     "prettier": "^3.3.3",
     "husky": "^9.0.10",
-    "lint-staged": "^16.1.5"
+    "lint-staged": "^16.1.5",
+    "@types/node": "^20.14.9",
+    "@types/node-fetch": "^2.6.11",
+    "@types/react": "^18.2.64",
+    "typescript": "^5.6.3"
   },
   "lint-staged": {
     "*.{js,jsx,mjs,cjs,ts,tsx}": [
