--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-FILE: docker-compose.yml
-
 version: "3.9"
 
 services:
@@ -230,12 +228,45 @@ services:
       timeout: 10s
       retries: 3
 
+  # Nginx for blackroad-prism-console
+  nginx:
+    image: nginx:alpine
+    container_name: blackroad-nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./public:/workspaces/blackroad-prism-console/public:ro
+      - ./logs/nginx:/var/log/nginx
+    restart: unless-stopped
+    networks:
+      - blackroad-network
+
+  # Optional: Add a simple API server if needed
+  api:
+    image: node:18-alpine
+    container_name: blackroad-api
+    working_dir: /app
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./api:/app
+    command: sh -c "npm install && npm start"
+    restart: unless-stopped
+    networks:
+      - blackroad-network
+    environment:
+      - NODE_ENV=development
+
 networks:
   lucidia-network:
     driver: bridge
     ipam:
       config:
         - subnet: 172.20.0.0/16
+  blackroad-network:
+    driver: bridge
 
 volumes:
   lucidia-blackroad-data:
@@ -252,3 +283,4 @@ volumes:
   elasticsearch-data:
   nginx-cache:
   nginx-logs:
+  nginx_logs:
