--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@aws-sdk/client-ssm": "^3.614.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "bcrypt": "^5.1.1",
@@ -61,6 +62,7 @@
     "husky": "^9.0.10",
     "lint-staged": "^16.1.5",
     "@types/node": "^20.14.9",
+    "@typescript-eslint/parser": "^8.8.0",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.2.64",
     "typescript": "^5.6.3"
