--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,47 @@
 name: ci
-on: [push, pull_request]
+
+on:
+  push:
+  pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
+
+permissions:
+  contents: read
+  checks: write
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
-    timeout-minutes: 10
+    if: >-
+      !(
+        github.event_name == 'push' &&
+        contains(github.event.head_commit.message, '[skip ci]')
+      ) &&
+      (github.event_name != 'pull_request' || github.event.pull_request.draft == false)
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: '3.11' }
-      - run: python -m pip install -U pip pytest jsonschema
-      - run: pytest -q
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+          cache-dependency-path: |
+            requirements.txt
+            requirements-dev.txt
+      - name: Install test dependencies
+        run: python -m pip install -U pip pytest jsonschema
+      - name: Run pytest
+        run: pytest -q --junitxml=junit-pytests.xml
+      - name: Publish test results
+        if: always()
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: |
+            **/junit-*.xml
       - name: Determinism smoke
         run: |
           python -m pip install .
@@ -24,15 +56,31 @@ jobs:
         run: bash scripts/hash_artifacts.sh || true
 
   build-test:
-    timeout-minutes: 10
+    if: >-
+      !(
+        github.event_name == 'push' &&
+        contains(github.event.head_commit.message, '[skip ci]')
+      ) &&
+      (github.event_name != 'pull_request' || github.event.pull_request.draft == false)
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: '20' }
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: |
+            apps/api/package-lock.json
       - run: npm ci --prefix apps/api
       - run: npm run build --prefix apps/api
       - run: npm test --prefix apps/api --if-present
+      - name: Publish test results
+        if: always()
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: |
+            apps/api/**/junit-*.xml
       - name: Upload API dist
         uses: actions/upload-artifact@v4
         with:
