--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,37 @@
 name: ci
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+  checks: write
+
 jobs:
   build:
-    timeout-minutes: 10
+    if: |
+      (github.event_name != 'pull_request' || github.event.pull_request.draft == false) &&
+      !contains(github.event.head_commit.message, '[skip ci]') &&
+      !contains(format('{0}', github.event.pull_request.title), '[skip ci]')
+    timeout-minutes: 20
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: '3.11' }
+        with:
+          python-version: '3.11'
+          cache: 'pip'
       - run: python -m pip install -U pip pytest jsonschema
-      - run: pytest -q
+      - name: Run pytest
+        run: |
+          mkdir -p artifacts/test-results
+          pytest -q --junitxml=artifacts/test-results/junit-python.xml
       - name: Determinism smoke
         run: |
           python -m pip install .
@@ -22,14 +44,26 @@ jobs:
         run: python scripts/validate_contracts.py
       - name: Artifacts hash
         run: bash scripts/hash_artifacts.sh || true
+      - name: Publish test results
+        if: always()
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: |
+            artifacts/test-results/junit-python.xml
 
   build-test:
-    timeout-minutes: 10
+    if: |
+      (github.event_name != 'pull_request' || github.event.pull_request.draft == false) &&
+      !contains(github.event.head_commit.message, '[skip ci]') &&
+      !contains(format('{0}', github.event.pull_request.title), '[skip ci]')
+    timeout-minutes: 20
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: '20' }
+        with:
+          node-version: '20'
+          cache: npm
       - run: npm ci --prefix apps/api
       - run: npm run build --prefix apps/api
       - run: npm test --prefix apps/api --if-present
