--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "morgan": "^1.10.0",
     "next": "^14.2.5",
     "socket.io": "^4.7.5",
+    "swr": "^2.2.5",
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
     "better-sqlite3": "^9.4.3",
