--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "@types/node": "^20.14.9",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.2.64",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "jest-junit": "^16.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,mjs,cjs,ts,tsx}": [
