Add GitHub bundle automation assets

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,5 +5,7 @@
 # Example: require core reviewers for security-sensitive areas
 docs/** @blackboxprogramming/maintainers
 .github/** @blackboxprogramming/maintainers
+scripts/** @blackboxprogramming/maintainers
+prs.csv @blackboxprogramming/maintainers
 miners/** @blackboxprogramming/maintainers
 lightning/** @blackboxprogramming/maintainers
