--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,18 +1,46 @@
-name: Feature request
-description: Suggest an idea
-labels: ["type/feature"]
+name: Feature Request
+description: Share an enhancement idea with the product team.
+labels: ["type/feature", "needs-triage"]
 body:
+  - type: markdown
+    attributes:
+      value: |
+        ### Opportunity snapshot
+        Capture the problem, the desired outcome, and rollout considerations so we can evaluate scope and impact quickly.
   - type: textarea
     id: problem
     attributes:
-      label: Problem
-      description: What problem are you facing?
+      label: Problem Statement
+      description: What is the pain you are trying to solve? Who is affected?
+      placeholder: Analysts need to pull weekly reports manually because the automation stops at midnight.
     validations:
       required: true
   - type: textarea
+    id: outcome
+    attributes:
+      label: Desired Outcome / Success Criteria
+      description: What should success look like once this is complete?
+  - type: textarea
     id: proposal
     attributes:
-      label: Proposal
-      description: What do you propose?
-    validations:
-      required: true
+      label: Proposed Solution
+      description: Describe the approach you have in mind (mockups, API shapes, metrics, etc.).
+      placeholder: Add a scheduled report builder that triggers the analytics export pipeline at 06:00 UTC.
+  - type: dropdown
+    id: urgency
+    attributes:
+      label: Urgency
+      options:
+        - ASAP - tied to a launch or OKR
+        - Soon - unlocks a near-term initiative
+        - Later - improvement / nice to have
+  - type: textarea
+    id: risks
+    attributes:
+      label: Risks / Dependencies
+      description: Are there related services, migrations, or approvals we should consider?
+  - type: textarea
+    id: rollout
+    attributes:
+      label: Rollout / Ops Notes
+      description: Document launch steps, comms, dashboards, or feature flag plans.
